[project]
name = "cyclotron"
version = "0.1.0"
description = "Python GC benchmark and stress test tool"
readme = "README.md"
authors = [
    { name = "Neil Schemenauer", email = "nas@arctrix.com" }
]
requires-python = ">=3.14"
license = "MIT"
license-files = ["LICENSE"]
dependencies = [
    "psutil",
]

[dependency-groups]
dev = [
    "ruff>=0.15.1",
]

[project.scripts]
cyclotron = "cyclotron.__main__:main"

[build-system]
requires = ["uv_build>=0.10.9,<0.11.0"]
build-backend = "uv_build"

[tool.black]
skip-string-normalization = true
#line-length = 78

[tool.ruff]
#line-length = 78

[tool.ruff.lint.pycodestyle]
#max-line-length = 78

[tool.ruff.format]
quote-style = "preserve"

[tool.ruff.lint]
select = ["E", "W", "F", "PT", "I"]
